Modulo de actualizar usuario HECHO
Se creo el archivo Script para las funciones de comparar las cedulas para verificar y la función para enviar los datos y actualizar

Se agrego un recuadro con el numero de cedula en el formulario donde se ingresan los datos a editar, este recuadro esta deshabilitado

En Usuarios DAO se realizo una modificación ya que en usuario se estaba guardando el correo

--- a/BO/src/main/webapp/style.css
+++ b/BO/src/main/webapp/style.css
@@ -270,6 +270,12 @@
   transition: 0.5s;
 }
 
+/* Estilo para los objetos deshabilitados */
+.form-control[readonly] {
+    background-color: var(--color-oscuro3);
+    opacity: 0.5;
+}
+
 .cont{
   padding: 120px 1px 0;
 }
